# simSUNDT3

./: LICENSE  README.md  index.html  package.json  svelte.config.cjs  svelte.config.js  svelte.config.mjs  tailwind.config.cjs  tsconfig.json  vite.config.ts
.github/workflows/: build-prod-package.yml  ci.yml  dev.yml  release.yml
articles/guides/: Example 6.md
src/: App.svelte  app.css  global.d.ts  index.cjs  index.html  index.js  ipc.cjs  ipc.js  preload.cjs  preload.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/resources/: presets.json
src-tauri/src/: main.rs
src-tauri/src/commands/: results.rs
src-tauri/src/commands/results/: identifiers.rs  interfaces.rs
src-tauri/src/commands/results/identifiers/: defects.rs  probes.rs  shared.rs
src-tauri/src/commands/results/identifiers/defects/: cc.rs  esi.rs  rc.rs  sbsl.rs  sc.rs  sdh.rs  slc.rs  sphc.rs
src-tauri/src/commands/results/identifiers/probes/: immersion.rs  swl.rs
src/components/: APlot.svelte  Alert.svelte  BPlot.svelte  Button.svelte  CPlot.svelte  DPlot.svelte  DensityPlot.svelte  HorizontalProgressbar.svelte  LinePlot.svelte  Log.svelte  Modal.svelte  NonParametricProgressOverview.svelte  OutputLog.svelte  ParametricProgressOverview.svelte  ParametricSettings.svelte  PlotModebar.svelte  Spinner.svelte  Tabs.svelte  Tooltip.svelte  TooltipMultiline.svelte  Tree.svelte  Viewport.svelte
src/components/buttons/: ExpandLeftButton.svelte
src/components/icons/: CompressionalWave.svelte  ShearWave.svelte  SimsundtIcon.svelte
src/components/importing/: SimsundtTwoResults.svelte
src/components/modals/: ImportModal.svelte  NewProjectModal.svelte  PresetProbesModal.svelte
src/components/plots/: APlot.svelte  BPlot.svelte  CPlot.svelte  DPlot.svelte
src/components/plotting/: APlot.svelte  BPlot.svelte  CPlot.svelte  DPlot.svelte  Modebar.svelte  Unitbar.svelte  Waveproperties.svelte  Zoombar.svelte
src/components/viewport/: Camera.svelte  Subject.svelte
src/electron_lib/: projectHandler.js
src/lib/: annotations.js  buttonData.ts  buttonDef.ts  colorscales.js  miscParameterisationDef.ts  outputLogDef.ts  preprocessorRunnerLogic.js  project.js  stores.js  tabDef.ts  tree.js  treeData.ts  treeDef.ts  treeUtil.ts  utDefIsoSaver.js  utDefParametricRunner.js  utDefResultParser.js  utDefRunner.js  utDefRunnerUtils.js  utDefSaverUtils.js  utDefUtils.js  utDefectIsoSaver.ts  utDefectIsoTreeBinder.ts  utDefectRunner.ts  utDefectTreeBinder.ts  utils.js
src/lib/data/: LoggingSingleton.ts  PresetsSingleton.ts  ProjectCacheSingleton.ts  ProjectSingleton.ts  Stores.ts
src/lib/models/: Article.ts  Button.ts  Cache.ts  FileCache.ts  Import.ts  Kernel.ts  Logging.ts  Positions.ts  Preset.ts  PresetPaths.ts  (+3 more)
src/renderer/: index.html
src/tabs/: File.svelte  Help.svelte  Preprocessor.svelte  Results.svelte
(+54 files in other folders)
